Fix mobile pixels: remove canvas stretching

--- a/styles.css
+++ b/styles.css
@@ -143,8 +143,6 @@ main {
 /* Canvas for pixel effect */
 .apple-field canvas {
     display: block;
-    width: 100%;
-    height: 100%;
 }
 
 /* Info Page */
